--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eventsource-parser": "^1.0.0",
     "framer-motion": "^10.12.22",
     "next": "13.2.4",
-    "openai": "^3.2.1",
+    "openai": "^4.0.0-beta.5",
     "parse-numeric-range": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
